--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -36,10 +36,10 @@ body {
 
 
 /* TABLE------------------------------------------------------------> */
-
 .content {
-    margin: 1px 30px 10px 30px;
+    margin: 0 auto;
     min-height: calc(100vh - 300px);
+    max-width: 1000px;
 }
 
 table {
@@ -55,8 +55,8 @@ td, th {
     width: 25%;
 }
 
-/* TITLE------------------------------------------------------------> */
 
+/* TITLE------------------------------------------------------------> */
 .title-table {
     display: flex;
     justify-content: center;
@@ -68,22 +68,28 @@ td, th {
     font-weight: 500;
 }
 
+.title-table h2 {
+    font-family: 'Didact Gothic', sans-serif;
+    font-size: 2em;
+    font-weight: 500;
+}
+
 @media (max-width: 600px) {
     .title-table h1 {
-        font-size: 2em;
+        font-size: 2.5em;
         font-weight: 500;
     }
 }
 
 @media (max-width: 450px) {
     .title-table h1 {
-        font-size: 1.5em;
+        font-size: 2em;
         font-weight: 500;
     }
 }
 
-/* HEADER-----------------------------------------------------------> */
 
+/* HEADER-----------------------------------------------------------> */
 .header {
     background: linear-gradient(135deg, rgb(83, 236, 241), rgb(12, 192, 168));
     padding: 30px;
@@ -128,6 +134,65 @@ td, th {
         margin-left: 10px;
     }
 }
+
+
+/* ARTICLE----------------------------------------------------------> */
+.article {
+    margin: 25px auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 1000px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 5px 15px -3px rgba(115,115,115,1);
+}
+
+@media (max-width: 760px) {
+    .article {
+        display: block;
+        margin: 15px 10px;
+    }
+}
+
+.article-img {
+    margin-left: 20px;
+    max-width: 200px;
+}
+
+@media (max-width: 760px) {
+    .article-img {
+        margin: 3px auto;
+    }
+}
+
+.tabela-periodica {
+    margin: 25px auto;
+    justify-content: center;
+    align-items: center;
+    max-width: 1000px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 5px 15px -3px rgba(115,115,115,1);
+}
+
+@media (max-width: 760px) {
+    .tabela-periodica {
+        margin: 15px 10px;
+    }
+}
+
+.tabela-periodica-h1 {
+    margin: 0 auto;
+}
+
+.tabela-periodica-img {
+    margin: 0 auto;
+    max-width: 400px;
+}
+
 
 
 /* FOOTER-----------------------------------------------------------> */
