--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,37 @@
+<title>Química</title>
+<link rel="icon" type="image/x-icon" href="../assets/img/logo.png">
+
 <body>
   <header class="header">
     <a href="#" class="logo"><img src="../assets/img/logo.png" alt=""></a>
   </header>
 
+  <div class="content">
+
   <div class="title-table">
     <h1>ELEMENTOS QUÍMICOS</h1>
   </div>
 
-  <div class="content">
+  <div class="tabela-periodica">
+    <h1 class="tabela-periodica-h1">Tabela Periódica</h1>
+    <section class="text">
+      <p>A tabela periódica é uma disposição sistemática dos elementos químicos ordenados por seus números atômicos, configuração eletrônica, e recorrência das propriedades periódicas. Este ordenamento mostra tendências periódicas, tais como elementos com comportamentos similares na mesma coluna.</p>
+    </section>
+    <section class="tabela-periodica-img">
+      <img src="../assets/img/tabela-periodica.webp" alt="">
+    </section>
+  </div>
+
+  <div class="article">
+    <section class="text">
+      <h1 class="article-title">O que são elementos químicos?</h1>
+      <p>Os elementos químicos são formados por átomos com o mesmo número de prótons. Eles são identificados por um símbolo de até três letras e organizados na tabela periódica. Os elementos químicos conhecidos são organizados na tabela periódica de acordo com os seus números atômicos. Todos os elementos químicos conhecidos estão presentes na tabela periódica. Eles são representados por uma sigla, onde a primeira letra é maiúscula. Veja abaixo uma tabela em que você pode adicionar e remover elementos químicos.</p>
+    </section>
+    <section class="article-img">
+      <img src="../assets/img/article-img.jpg" alt="">
+    </section>
+  </div>
+  
   <div class="demo-button-container">
     <button mat-raised-button (click)="addData()" class="demo-button">
       ADICIONAR ELEMENTO
@@ -17,23 +41,23 @@
         [disabled]="!dataSource.length"
         (click)="removeData()"
         class="demo-button">
-      REMOVER ELEMENTO
+      REMOVER
     </button>
   </div>
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Elemento</th>
+      <th mat-header-cell *matHeaderCellDef>ELEMENTO</th>
       <td mat-cell *matCellDef="let element">{{element.name}}</td>
     </ng-container>
 
     <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef>Massa Atômica</th>
+      <th mat-header-cell *matHeaderCellDef>MASSA ATÔMICA</th>
       <td mat-cell *matCellDef="let element">{{element.weight}}</td>
     </ng-container>
 
     <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef>Símbolo</th>
+      <th mat-header-cell *matHeaderCellDef>SÍMBOLO</th>
       <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
     </ng-container>
 
